@@ -1,5 +1,6 @@
 cm4all-workshop (4.0.1) unstable; urgency=low
 
+  * require PostgreSQL 9.6 or later
   * fix "std::bad_alloc" error after database connection loss
 
  --   
